Minor spacing issues

--- a/src/App.css
+++ b/src/App.css
@@ -33,5 +33,5 @@ body {
     'log'
     'loading'
     'question';
-  grid-template-rows: 7.6rem 1fr 24px 80px;
+  grid-template-rows: 7.6rem 1fr 2.6rem 8rem;
 }
